# usb-term

./: README.md
src/: usb_ids.c  usb_ids.h  usbcon.cpp  usbcon.h
src/resources/: resource.qrc
src/tools/: get-ids.sh  vid_pid_parser.py
src/usb-term/: CMakeLists.txt  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  hex_dump.cpp  hex_dump.h  inputform.cpp  inputform.h  inputform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputform.cpp  outputform.h  outputform.ui  resource.qrc  test_text.txt  text_highlighter.cpp  text_highlighter.h  text_parser.cpp  text_parser.h  usb-term.pro  usb_ids.c  usbcon.h
